--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>weatherbee</title>
+    <title>weather bee</title>
     <link href="./styles.css" />
     <script type="module" src="./main.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="./assets/bee-night.svg" />
   </head>
   <body>
     <div id="main-container">
