A few styling fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <title>weather bee</title>
     <link href="./styles.css" />
     <script type="module" src="./main.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="./assets/bee-night.svg" />
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="./assets/bee-favicon.svg"
+    />
   </head>
   <body>
     <div id="main-container">
